gcc/testsuite/rust/rustc/ui/no-std-inject.rs
#![no_std]

extern crate core; // { dg-error ".E0259." "" { target *-*-* } }
extern crate std;

fn main() {}

